# Point-Cloud-Registration-Using-Distance-Geometry

./: README.md
PCRUDG-0.0.2/: CMakeLists.txt  PCRUDG002.pro  icon.qrc
PCRUDG-0.0.2/Documentations/: Doxyfile  install_doxygen.sh
PCRUDG-0.0.2/forms/: mainwindow.ui
PCRUDG-0.0.2/include/: glwidget.h  mainwindow.h  point_cloud_container.h  point_cloud_distance_geometry_registration.h  point_cloud_registration.h  registration_point_cloud_container.h  str_utils.h  ui_mainwindow.h
PCRUDG-0.0.2/installation_scripts/: install_opengl  install_pcl1.7
PCRUDG-0.0.2/src/: glwidget.cpp  main.cpp  mainwindow.cpp  point_cloud_container.cpp  registration_point_cloud_container.cpp  str_utils.cpp
